Creation modele Product

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -10,6 +10,8 @@
 <button mat-button class="blue-bg" (click)="isAdmin = !isAdmin">Switch admin</button>
 <button mat-button class="blue-bg" (click)="changeAdmin()">Switch admin</button>
 
+<p [ngClass]="classesCss">Utilisation de ngClass</p>
+
 <ul>
   <li>Puce 1</li>
   <li>Puce 2</li>
