--- a/src/app/product-create/product-create.component.html
+++ b/src/app/product-create/product-create.component.html
@@ -1,1 +1,16 @@
-<p>product-create works!</p>
+<section class="container">
+  <h1>Création d'un produit</h1>
+  <form class="example-form">
+    <mat-form-field class="example-full-width">
+      <input [(ngModel)]="product.name" name="name" matInput placeholder="Nom">
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <textarea [(ngModel)]="product.description" name="description" matInput placeholder="Description"></textarea>
+    </mat-form-field>
+
+    <button mat-button class="blue-bg">Créer</button>
+  </form>
+
+  <p>{{ product | json }}</p>
+</section>
