Communication entre ProductList vers ProductShow

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -25,18 +25,12 @@
   <mat-radio-button
     *ngFor="let product of products"
     [value]="product.name"
-    class="example-radio-button">
+    class="example-radio-button"
+    (change)="choosenProduct = product"
+  >
     {{ product.name }}
   </mat-radio-button>
 </mat-radio-group>
 
-
-
-
-
-
-
-
-
-
+<app-product-show [product]="choosenProduct"></app-product-show>
 
