--- a/src/app/product-show/product-show.component.html
+++ b/src/app/product-show/product-show.component.html
@@ -1,4 +1,15 @@
 <ng-container *ngIf="product">
   <h2>Détail {{product.name}}</h2>
   <p>{{product.description}}</p>
+  <h3>Vote</h3>
+  <mat-slider
+    thumbLabel
+    tickInterval="1000"
+    min="1"
+    max="10"
+
+    #voteSlider
+    (change)="handleVote(voteSlider.value)"
+  ></mat-slider>
+
 </ng-container>
