--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,9 @@
                [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/">Page d'accueil</a>
+      <a mat-list-item routerLink="/produits">Les produits</a>
+      <a mat-list-item routerLink="/produits/creation">Créer un nouveau produit</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -20,7 +20,11 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Page d'accueil</span>
+      <mat-nav-list>
+        <a mat-list-item routerLink="/">Page d'accueil</a>
+        <a mat-list-item routerLink="/produits">Les produits</a>
+        <a mat-list-item routerLink="/produits/creation">Créer un nouveau produit</a>
+      </mat-nav-list>
     </mat-toolbar>
 
     <!-- Pour le routage -->
