--- a/src/app/product-create/product-create.component.scss
+++ b/src/app/product-create/product-create.component.scss
@@ -2,10 +2,8 @@
   min-width: 150px;
   max-width: 500px;
   width: 100%;
+
+  mat-form-field {
+    width: 100%;
+  }
 }
-
-.example-full-width {
-  width: 100%;
-}
-
-
