--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,3 @@
-
 mat-card {
   max-width: 300px;
 }
@@ -10,4 +9,7 @@ mat-card {
 .example-header-image {
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
+}
+.teal-text {
+  color: teal;
 }
