--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,18 +1,34 @@
-<mat-radio-group
-  aria-labelledby="example-radio-group-label"
-  class="example-radio-group">
-  <mat-radio-button
-    *ngFor="let product of products; index as i"
-    [value]="product.name"
-    class="example-radio-button"
-    (change)="choosenProduct = product"
-  >
-    {{ product.name }} ({{getAverage(i)}})
-  </mat-radio-button>
-</mat-radio-group>
+<main>
+  <div>
+    <mat-grid-list cols="2">
+      <mat-grid-tile
+        *ngFor="let product of products; index as i"
+      >
+        <mat-card class="example-card">
+          <mat-card-header>
+            <mat-card-title>{{product.name}}</mat-card-title>
+            <mat-card-subtitle>Note : {{getAverage(i)}}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            <p>{{product.description}}</p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-button
+                    (click)="choosenProduct = product"
+            >Voter</button>
+            <button mat-button>SHARE</button>
+          </mat-card-actions>
+        </mat-card>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
 
-<app-product-show
-  [product]="choosenProduct"
-  (voted)="handleVote($event)"
-></app-product-show>
+
+  <app-product-show
+    [product]="choosenProduct"
+    (voted)="handleVote($event)"
+  ></app-product-show>
+
+</main>
+
 
