--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -1,6 +1,28 @@
-.teal-text {
-  color: teal;
+main {
+  display: flex;
+
+  >div:first-of-type {
+    height: calc(100vh - 36px) !important;
+    overflow: auto;
+    width: 100%;
+  }
+
+  mat-grid-list {
+    flex: 2;
+
+  }
+  app-product-show {
+    flex: 1;
+    min-width: 250px;
+  }
+
+  mat-card {
+    margin: 0.75rem;
+    width: 100%;
+  }
 }
+
+
 
 .example-radio-group {
   display: flex;
