--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,5 @@
+
+<h1>Liste des produits</h1>
 <main>
   <div>
     <mat-grid-list cols="2">
@@ -13,10 +15,13 @@
             <p>{{product.description}}</p>
           </mat-card-content>
           <mat-card-actions>
-            <button mat-button
+            <button mat-stroked-button
+
                     (click)="choosenProduct = product"
             >Voter</button>
-            <button mat-button>SHARE</button>
+            <button mat-stroked-button color="primary" routerLink="/produits/{{product.id}}">Détail</button>
+            <button mat-stroked-button color="accent">Modifier</button>
+            <button mat-stroked-button color="warn">Supprimer</button>
           </mat-card-actions>
         </mat-card>
       </mat-grid-tile>
