--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -1,25 +1,24 @@
 main {
   display: flex;
+}
+main >div:first-of-type {
+  height: calc(100vh - 146px) !important;
+  overflow: auto;
+  width: 100%;
+}
 
-  >div:first-of-type {
-    height: calc(100vh - 36px) !important;
-    overflow: auto;
-    width: 100%;
-  }
+main mat-grid-list {
+  flex: 2;
 
-  mat-grid-list {
-    flex: 2;
+}
+main app-product-show {
+  flex: 1;
+  min-width: 250px;
+}
 
-  }
-  app-product-show {
-    flex: 1;
-    min-width: 250px;
-  }
-
-  mat-card {
-    margin: 0.75rem;
-    width: 100%;
-  }
+main mat-card {
+  margin: 0.75rem;
+  width: 100%;
 }
 
 
